Added js css and text files

--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
 <!DOCTYPE html>
-    
+<head></head>
+<body style="background-color: #F6DFEB;">
+<script src="script.js"></script>
+<style src="style.css"></style>
+<p id="test" style="color: #3C2C3E;">text1</p>
+<button onclick="loadText('text.txt');">update</button>
+<button onclick="up();" style="background-color: #B9F3E4;">up</button>
+<button onclick="down();" style="background-color: #FFAACF;">down</button>
+</body>
 </html>
