Fixed mobile Input

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <head>
+    <input id="dummyInput" type="text" style="position:fixed;left:-2000px";>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
-<body style="background-color: #F6DFEB;">
+<body>
 
 
 <p id="test" style="color: #3C2C3E;">text1</p>
