Fixed input for mobile(Maybe)

--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <head>
-    <input id="dummyInput" type="text" style="position:fixed;left:-2000px";>
+    <input id="dummyInput" onchange="mobileWrite();" type="text" style="position:fixed;left:-2000px";>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
 <body>
 
 
-<p id="test" style="color: #3C2C3E;">text1</p>
-<button onclick="loadText('text.txt');">update</button>
-<button onclick="up();" style="background-color: #B9F3E4;">up</button>
-<button onclick="down();" style="background-color: #FFAACF;">down</button>
+<p id="test" style="color: #3C2C3E;"></p>
+
 </body>
 </html>
