normal input on mobile(hopefully)

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <input id="dummyInput" onchange="mobileWrite();" type="text" style="position:fixed;left:-2000px";>
+    <input id="dummyInput" onchange="mobileWrite();" type="text" style="position:fixed;top:-2000px;height: 200px;width:1000px;";>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
