--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <input id="dummyInput" onchange="mobileWrite();" type="text" style="position:fixed;top:-2000px;height: 200px;width:1000px;";>
+    <input id="dummyInput" onchange="mobileWrite();" type="text" style="position:absolute;height: 100%;width:100%;background-color: transparent;color: transparent;border-color: transparent;">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
