--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+    <p class="score" id="score">0</p>
     <input id="credit-card-mask" onchange="//mobileWrite();" type="text" style="position:absolute;height: 5%;width:100%;background-color: transparent;color: transparent;border-color: transparent;font-size: 100px;">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
