Added "Regenerate" button

--- a/sentenceBuild.html
+++ b/sentenceBuild.html
@@ -6,5 +6,6 @@
 <body>
     <p id="sentence"></p>
     <p class="spoiler" id="spoiler"></p>
+    <button onclick="newSentence();">Next</button>
 </body>
 </html>
