--- a/sentenceBuild.html
+++ b/sentenceBuild.html
@@ -5,6 +5,8 @@
 </head>
 <body>
     <p id="sentence"></p>
+    <br><br>
+    <p id="prompt"></p>
     <p class="spoiler" id="spoiler"></p>
     <button onclick="newSentence();">Next</button>
 </body>
