--- a/sentenceBuild.html
+++ b/sentenceBuild.html
@@ -8,6 +8,6 @@
     <br><br>
     <p id="prompt"></p>
     <p class="spoiler" id="spoiler"></p>
-    <button onclick="newSentence();">Next</button>
+    <button class="next" onclick="newSentence();">Next</button>
 </body>
 </html>
