--- a/sentenceBuild.html
+++ b/sentenceBuild.html
@@ -8,5 +8,9 @@
     <p id="prompt"></p>
     <p class="spoiler" id="spoiler"></p>
     <button class="next" onclick="newSentence();">Next</button>
+    <br>
+    <div class="slidecontainer">
+        <input type="range" min="0.2" max="0.8" value="0.5" class="slider" id="difficulty">
+      </div>
 </body>
 </html>
