--- a/sentenceBuild.html
+++ b/sentenceBuild.html
@@ -13,4 +13,8 @@
         <input type="range" min="1" max="5" value="3" class="slider" id="difficulty">
       </div>
 </body>
+<footer>
+    <a href="/?set=19163-0.txt"></a>
+    <a href="/"></a>
+</footer>
 </html>
