--- a/sentenceBuild.html
+++ b/sentenceBuild.html
@@ -9,12 +9,10 @@
     <p class="spoiler" id="spoiler"></p>
     <button class="next" onclick="newSentence();">Next</button>
     <br>
-    <div class="slidecontainer">
-        <input type="range" min="1" max="5" value="3" class="slider" id="difficulty">
-      </div>
+    <input type="range" min="1" max="5" value="3" class="slider" id="difficulty">
 </body>
 <footer>
-    <a href="/?set=19163-0.txt"></a>
-    <a href="/"></a>
+    <a href="/sentenceBuild?set=19163-0.txt"></a>
+    <a href="/sentenceBuild"></a>
 </footer>
 </html>
