--- a/sentenceBuild.html
+++ b/sentenceBuild.html
@@ -9,7 +9,7 @@
     <p class="spoiler" id="spoiler"></p>
     <button class="next" onclick="newSentence();">Next</button>
     <br>
-    <input type="range" min="1" max="5" value="3" class="slider" id="difficulty">
+    <input type="range" min="1" max="5" value="3" class="slider" id="dif">
 </body>
 <footer>
     <a href="/sentenceBuild?set=19163-0.txt"></a>
