--- a/sentenceBuild.html
+++ b/sentenceBuild.html
@@ -12,7 +12,8 @@
     <input type="range" min="1" max="5" value="3" class="slider" id="dif">
 </body>
 <footer>
-    <a href="/sentenceBuild?set=19163-0.txt"></a>
-    <a href="/sentenceBuild"></a>
+    <a href="/sentenceBuild?set=19163-0.txt">B2 test level</a>
+    <a href="/sentenceBuild">C1 test level</a>
+    <p class="star">*language levels are only our estimates and do not represent real level of vocbulary or grammar.</p>
 </footer>
 </html>
