--- a/sentenceBuild.html
+++ b/sentenceBuild.html
@@ -9,7 +9,14 @@
     <p class="spoiler" id="spoiler"></p>
     <button class="next" onclick="newSentence();">Next</button>
     <br>
-    <input type="range" min="1" max="5" value="3" class="slider" id="dif">
+    <div class="difContainer">
+        <span>Easy</span>
+        <span>Normal</span>
+        <span>Hard</span>
+        <span>Insane</span>
+        <span>Extreme</span>
+    </div>
+    <input type="range" min="1" max="5" value="3" step="0.1" class="slider" id="dif">
 </body>
 <footer>
     <a href="/sentenceBuild?set=19163-0.txt">B2 test level</a>
