--- a/sentenceBuild.html
+++ b/sentenceBuild.html
@@ -20,6 +20,7 @@
 </body>
 <br>
 <footer>
+    <a href="/sentenceBuild?set=pg19778.txt">B1</a>
     <a href="/sentenceBuild?set=19163-0.txt">B2 test level</a>
     <a href="/sentenceBuild">C1 test level</a>
     <p class="star">*language levels are only our estimates and do not represent real level of vocbulary or grammar.</p>
