--- a/index.html
+++ b/index.html
@@ -8,4 +8,11 @@
     <body>
         <p id="test" style="color: #3C2C3E;"></p>
     </body>
+<br>
+<footer>
+    <a href="/sentenceBuild?set=pg19778.txt">B1 test level</a>
+    <a href="/sentenceBuild?set=19163-0.txt">B2 test level</a>
+    <a href="/sentenceBuild">C1 test level</a>
+    <p class="star">*language levels are only our estimates and do not represent real level of vocbulary or grammar.</p>
+</footer>
 </html>
