--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <p id="test" style="color: #3C2C3E;"></p>    <input type="range" min="1" max="5" value="2" step="0.1" class="slider" id="dif">
+        <p id="test" style="color: #3C2C3E;"></p>  <div id="cont"></div>  <input type="range" min="1" max="5" value="2" step="0.1" class="slider" id="dif">
     </body>
 <br>
 <footer>
