--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <p id="test" style="color: #3C2C3E;"></p>  <div id="cont"></div>  <input type="range" min="1" max="5" value="2" step="0.1" class="slider" id="dif">
+        <p id="test" style="color: #3C2C3E;"></p>
+        <div id="cont"></div>
+        <div class="difContainer">
+            <span>Easy</span>
+            <span>Normal</span>
+            <span>Hard</span>
+            <span>Insane</span>
+            <span>Extreme</span>
+        </div>
+        <input type="range" min="1" max="5" value="2" step="0.1" class="slider" id="dif">
     </body>
 <br>
 <footer>
