commit html file.

--- a/verbPrep.html
+++ b/verbPrep.html
@@ -5,8 +5,7 @@
 </head>
 <body>
     <br><br><br><br><br>
-<p id="verb" style="font-size: 35pt;">Verzichten ...</p>
-<br><br><br><br>
+<p id="verb" class="prepText">Verzichten ...</p>
 <div id="answers" class="container">
 </div>
 </body>
